--- a/views/user/signup.handlebars
+++ b/views/user/signup.handlebars
@@ -12,7 +12,7 @@
 	 			<input type="password" id="password" name="password" class="form-control">
 	 		</div>
 	 		<input type="hidden" name="_csrf" value"{{ csrfToken }}">
-	 		<button type="submit">Register</button>
+	 		<button type="submit" class="btn btn-primary">Register</button>
 	 	</form>
 	
 	</div>
